Add Smart Journal multi-chart RC1 flow
